--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -1,21 +1,29 @@
 {
-    // Use IntelliSense to learn about possible attributes.
-    // Hover to view descriptions of existing attributes.
-    // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
     "version": "0.2.0",
     "configurations": [
         {
-            "name": "Launch Package",
+            "name": "Launch",
             "type": "go",
             "request": "launch",
             "mode": "auto",
-            "program": "${workspaceRoot}/cmd/SettingsService/main.go",
+            "program": "${workspaceRoot}/cmd/SettingsService",
             "console": "integratedTerminal",
             "env": {
                 "SettingsServicePort": "9999",
                 "SettingsServiceDbConnectionString": "postgres://pg:1@localhost:5432/servicesSettings_db",
                 "SettingsServiceEnv": "dev"
-            }
-        }
+            },
+            //"postDebugTask": "post debug",
+            "cwd": "${workspaceRoot}"
+        },
+        { /* Debug Exec (faster launch) + visible build output in terminal */
+            "name": "Debug Exec",
+            "type": "go",
+            "request": "launch",
+            "mode": "exec",
+            "preLaunchTask": "dev build",
+            "program": "${workspaceRoot}/output",
+            "cwd": "${workspaceRoot}"
+        },
     ]
 }
