--- a/configs/appSettings.json
+++ b/configs/appSettings.json
@@ -1,4 +1,4 @@
 {
-  "SettingsServicePort": "9999",
-  "SettingsServiceDbConnectionString": "postgres://pg:1@localhost:5432/servicesSettings_db"
+  "settingsServicePort": "9999",
+  "settingsServiceDbConnectionString": "postgres://pg:1@localhost:5432/servicesSettings_db"
 }
