--- a/test/database/docker-compose.yml
+++ b/test/database/docker-compose.yml
@@ -1,6 +1,6 @@
 version: "1.0"
 services:
-  wishlist_db:
+  servicesSettings_db:
     image: postgres:latest
     environment:
       POSTGRES_DB: servicesSettings_db
